--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
+    "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
+    "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "nanoid": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.13.0",
-    "expo-camera": "~13.4.4",
-    "expo-media-library": "~15.4.1",
-    "expo-location": "~16.1.0",
-    "react-native-maps": "1.7.1"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
